[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
atoi = "2"
clap = { version = "4.5.54", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio-stream = "0.1"
async-stream = "0.3.0"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
